<!-- Scrollview is needed to add the scrollbar to a Activity page -->
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"    
	android:id="@+id/ScrollView01"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="588dp"
    android:background="@color/Black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InfoActivity" >
      
    <!-- Fiddler Logo image -->   
    <ImageView
          android:id="@+id/imageFiddlerLogo"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:contentDescription="@string/logo_description"
          android:gravity="center"
          android:paddingBottom="05dip"
          android:paddingTop="05dip"
          android:src="@drawable/fiddle" />  
    
    <!-- Red General Admission text -->  
    <TextView
          android:id="@+id/textView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/imageFiddlerLogo"
          android:layout_centerHorizontal="true"
          android:gravity="center"
          android:text="@string/general_admission"
          android:textColor="@color/Red"
          android:textSize="23sp" /> 
    
    <!-- Yellow Admission Text -->   
    <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/textView1"
          android:layout_marginTop="30dp"
          android:text="@string/admission"
          android:textAppearance="?android:attr/textAppearanceSmall"
          android:textColor="@color/Yellow" />   
      
    <!-- Admission Info Text -->
    <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/textView2"
          android:layout_below="@+id/textView2"
          android:text="@string/admission_info"
          android:textAppearance="?android:attr/textAppearanceSmall"
          android:textColor="@color/White" />
  
    <!-- Yellow Admission Cost Text -->
    <TextView
          android:id="@+id/textView4"
          android:layout_below="@id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="46dp"
          android:text="@string/admission_cost"
          android:textAppearance="?android:attr/textAppearanceSmall"
          android:textColor="@color/Yellow" />
 
     <!-- Admission Cost Info Text -->
     <TextView
          android:id="@+id/textView5"
          android:layout_below="@id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="1dp"
          android:text="@string/admission_cost_info"
          android:textAppearance="?android:attr/textAppearanceSmall"
          android:textColor="@color/White" />

      <!-- Children and Pet Info Text -->
      <TextView
          android:id="@+id/textView6"
          android:layout_below="@id/textView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="40dp"
          android:text="@string/children_info"
          android:textColor="@color/White" />
      
      <!-- Red Arrow to go to the next info page -->

        <ImageView
            android:id="@+id/imageArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_toRightOf="@+id/textView5"
            android:clickable="true"
            android:contentDescription="@string/arrow_description"
            android:gravity="center"
            android:onClick="OnClickArrow"
            android:paddingBottom="05dip"
            android:paddingTop="05dip"
            android:src="@drawable/arrow" />

</RelativeLayout>
</ScrollView>