<!-- Scrollview is needed to add the scrollbar to a Activity page -->
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"    
	android:id="@+id/ScrollView01"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true" >

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
 
	<!-- Textview for What would you like to do?  --> 
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageFiddlerLogo"
        android:layout_centerHorizontal="true"
        android:text="@string/question_text"
        android:textSize="22sp"
        android:textColor="@color/Yellow" />
    
    <!-- Fiddlers Logo Image -->
    
    <ImageView
        android:id="@+id/imageFiddlerLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:contentDescription="@string/logo_description"
        android:gravity="center"
        android:onClick="OnClickLogo"
        android:paddingBottom="05dip"
        android:paddingTop="05dip"
        android:src="@drawable/fiddle" />

    <!-- Button to go to the Admission info activity  -->    
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="OnClickInfo"
        android:text="@string/admission_button" />

    <!-- Button to go to the Campus Map  -->    
    <Button
        android:id="@+id/button2"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button1"
        android:clickable="true"
        android:onClick="OnClickMap"
        android:text="@string/map_button" />

    <!-- Button to go to the Schedule -->      
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/button2"
        android:clickable="true"
        android:onClick="OnClickSchedule"        
        android:text="@string/schedule_button" />

    <!-- Button to go to the Winners -->       
    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_below="@+id/button3"
        android:clickable="true"
        android:onClick="OnClickWinners"        
        android:text="@string/winners_button" />

     <Button
         android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/button4"
         android:layout_alignRight="@+id/button4"
         android:layout_below="@+id/button4"
         android:clickable="true"
         android:onClick="OnClickCam"
         android:text="@string/cam_button" />

</RelativeLayout>
</ScrollView>