<!-- Scrollview is needed to add the scrollbar to a Activity page -->
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"    
	android:id="@+id/ScrollView01"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="503dp"
    android:background="@color/Black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Info2Activity" >
      
    <!-- Fiddlers Logo -->

     <ImageView
         android:id="@+id/imageFiddlerLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:contentDescription="@string/logo_description"
         android:gravity="center"
         android:paddingBottom="05dip"
         android:paddingTop="05dip"
         android:src="@drawable/fiddle" />
    
    <!-- Red General Admission text -->  
    <TextView
          android:id="@+id/textView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/imageFiddlerLogo"
          android:layout_centerHorizontal="true"
          android:gravity="center"
          android:text="@string/general_admission"
          android:textColor="@color/Red"
          android:textSize="23sp" /> 
          
    
       <!-- Yellow Consideration Text -->

       <TextView
           android:id="@+id/textView2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/imageFiddlerLogo"
           android:layout_below="@+id/textView1"
           android:layout_marginTop="14dp"
           android:text="@string/info2_considerations"
           android:textAppearance="?android:attr/textAppearanceSmall"
           android:textColor="@color/Yellow" />
       
       <!-- Stage Location Text -->
       
       <TextView
           android:id="@+id/textView3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/textView2"
           android:layout_below="@+id/textView2"
           android:layout_marginTop="14dp"
           android:text="@string/info2_stage"
           android:textAppearance="?android:attr/textAppearanceSmall"
           android:textColor="@color/White" />
       
       
       <!-- Rain Info Text -->
       
       <TextView
           android:id="@+id/textView4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/textView5"
           android:layout_below="@+id/textView5"
           android:layout_marginTop="16dp"
           android:text="@string/info2_rain"
           android:textAppearance="?android:attr/textAppearanceSmall"
           android:textColor="@color/White" />
       
       <!-- Entry Info Text -->

      <TextView
          android:id="@+id/textView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/textView3"
          android:layout_below="@+id/textView3"
          android:layout_marginTop="19dp"
          android:text="@string/info2_entry"
          android:textAppearance="?android:attr/textAppearanceSmall"
          android:textColor="@color/White" />
       
       <!-- Free Camping Info Text -->

       <TextView
           android:id="@+id/textView6"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/textView4"
           android:layout_below="@+id/textView4"
           android:layout_marginTop="16dp"
           android:text="@string/info2_camping"
           android:textAppearance="?android:attr/textAppearanceSmall"
           android:textColor="@color/White" />
       
        <!-- Home Image -->

         <ImageView
             android:id="@+id/imagehome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignRight="@+id/textView5"
             android:layout_below="@+id/textView6"
             android:contentDescription="@string/homelogo_description"
             android:gravity="center"
             android:paddingBottom="05dip"
             android:paddingTop="05dip"
             android:clickable="true"
             android:onClick="OnClickHome"
             android:src="@drawable/home" />

</RelativeLayout>
</ScrollView>