<!-- Scrollview is needed to add the scrollbar to a Activity page -->
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"    
	android:id="@+id/ScrollView01"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="474dp"
    android:background="@color/Black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InfoHomeActivity" >
    
	   <!-- fiddlers logo -->
	   
	   <ImageView
           android:id="@+id/imageinfologo"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentTop="true"
           android:layout_marginLeft="25dp"
           android:layout_marginTop="27dp"
           android:layout_toRightOf="@+id/textView2"
           android:contentDescription="@string/infologo_description"
           android:gravity="center"
           android:paddingBottom="05dip"
           android:paddingTop="05dip"
           android:src="@drawable/infologo" />

       <TextView
           android:id="@+id/textView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_alignTop="@+id/imageinfologo"
           android:gravity="center"
           android:text="@string/info_home_main"
           android:textColor="@color/Red"
           android:textSize="23sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/imageinfologo"
            android:layout_below="@+id/imageinfologo"
            android:layout_marginTop="22dp"
            android:text="@string/info_home_blob"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/White" />

         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/imageinfologo"
             android:layout_alignLeft="@+id/textView1"
             android:layout_marginBottom="32dp"
             android:text="@string/info_home_invite"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/White" />
         
         <!-- red arrow -->

         <ImageView
             android:id="@+id/imageArrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignRight="@+id/textView3"
             android:layout_marginBottom="21dp"
             android:layout_marginRight="23dp"
             android:clickable="true"
             android:contentDescription="@string/arrow_description"
             android:gravity="center"
             android:onClick="OnClickArrow"
             android:paddingBottom="05dip"
             android:paddingTop="05dip"
             android:src="@drawable/arrow" />



</RelativeLayout>
</ScrollView>